tests/type_errors/sort_on_option.nos
# expect_error: no method sort
main() = Some(42).sort()
